--- a/ensalada/pom.xml
+++ b/ensalada/pom.xml
@@ -32,6 +32,12 @@
       <version>${clojure.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>overtone</groupId>
+      <artifactId>overtone</artifactId>
+      <version>0.1</version>
+    </dependency>
+
     <!-- test scope -->
     <dependency>
       <groupId>junit</groupId>
